@@ -22,6 +22,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{507, 75}, {993, 950}}</string>
+	<string>{{578, 86}, {870, 1085}}</string>
 </dict>
 </plist>
