@@ -1,5 +1,9 @@
 2007-11-22  Satoshi Nakagawa <artension@gmail.com>
 
+	Added a double click event handler on the channel list to join a selected channel.
+
+2007-11-22  Satoshi Nakagawa <artension@gmail.com>
+
 	Changed to load and save the condition of the channel list dialog.
 
 2007-11-22  Satoshi Nakagawa <artension@gmail.com>
